     add snprintf checks. ok djm@ markus@
   - markus@cvs.openbsd.org 2005/05/02 21:13:22
     [readpass.c]
     missing {}
   - djm@cvs.openbsd.org 2005/05/10 10:28:11
     [ssh.c]
     print nice error message for EADDRINUSE as well (ID sync only)
   - djm@cvs.openbsd.org 2005/05/10 10:30:43
     [ssh.c]
     report real errors on fallback from ControlMaster=no to normal connect

20050524
 - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
         [contrib/suse/openssh.spec] Update spec file versions to 4.1p1
 - (dtucker) [auth-pam.c] Since people don't seem to be getting the message
   that USE_POSIX_THREADS is unsupported, not recommended and generally a bad
   idea, it is now known as UNSUPPORTED_POSIX_THREADS_HACK.  Attempting to use
   USE_POSIX_THREADS will now generate an error so we don't silently change
   behaviour.  ok djm@
 - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Ensure sufficient memory
   allocation when retrieving core Windows environment.  Add CYGWIN variable
   to propagated variables.  Patch from vinschen at redhat.com, ok djm@
 - Release 4.1p1

20050524
 - (djm) [openbsd-compat/readpassphrase.c] bz #950: Retry tcsetattr to ensure
   terminal modes are reset correctly. Fix from peak AT argo.troja.mff.cuni.cz;
   "looks ok" dtucker@

20050512
 - (tim) [buildpkg.sh.in] missing ${PKG_INSTALL_ROOT} in init script
   hard link section. Bug 1038.

20050509
 - (dtucker) [contrib/cygwin/ssh-host-config] Add a test and warning for a
   user-mode mounts in Cygwin installation.  Patch from vinschen at redhat.com.

20050504
 - (djm) [ssh.c] some systems return EADDRINUSE on a bind to an already-used
   unix domain socket, so catch that too; from jakob@ ok dtucker@

20050503
 - (dtucker) [canohost.c] normalise socket addresses returned by
   get_remote_hostname().  This means that IPv4 addresses in log messages
   on IPv6 enabled machines will no longer be prefixed by "::ffff:" and